# MVPR-Rust

./: .gitignore  Cargo.toml  Makefile  README.md
contract/src/: main.rs
contracts/execution/: Cargo.toml
contracts/execution/src/: main.rs
contracts/governance/: Cargo.toml
contracts/governance/src/: errors.rs  main.rs
contracts/proposal/: Cargo.toml
contracts/proposal/src/: main.rs
contracts/reputation/: Cargo.toml
contracts/reputation/src/: errors.rs  main.rs
contracts/voting/: Cargo.toml
contracts/voting/src/: errors.rs  main.rs
logic/: Cargo.toml
logic/proposal/: Cargo.toml
logic/proposal/src/: error.rs  lib.rs  proposal.rs  voting.rs
logic/src/: custom_types.rs  error.rs  execution.rs  lib.rs  proposal.rs  reputation.rs  voting.rs
tests/src/: lib.rs
